--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,9 +32,10 @@ main {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  z-index: -1;
+  z-index: 1;
   top: 0;
   left: 0;
+  pointer-events: none;
 }
 
 body {
