working on house roofs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --color-primary: #4C9F70;
-    --color-secondary: #496F5D;
-    --color-dark: #49516F;
-    --color-accent: #6279B8;
-    --color-accent-2: #8EA4D2;
-  }
+    :root {
+        --color-primary: #4c9f70;
+        --color-secondary: #496f5d;
+        --color-dark: #49516f;
+        --color-accent: #6279b8;
+        --color-accent-2: #8ea4d2;
+    }
 }
 
 .button-primary {
@@ -20,24 +20,29 @@
     @apply px-4 py-2 bg-gray-100 rounded text-gray-500 cursor-pointer hover:shadow transition-all;
 }
 
+body,
 #root {
-  min-height: 100vh;
+    height: 100%;
+}
+
+#root {
+    min-height: 100vh;
 }
 
 main {
-  min-height: calc(100vh - 56px);
+    min-height: calc(100vh - 56px);
 }
 
 .ribbons {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  pointer-events: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    pointer-events: none;
 }
 
 body {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
