--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,11 +13,11 @@
 }
 
 .button-primary {
-    @apply px-4 py-2 bg-primary rounded text-white cursor-pointer hover:shadow transition-all;
+  @apply px-4 py-2 bg-primary rounded text-white cursor-pointer hover:shadow transition-all;
 }
 
 .button-secondary {
-    @apply px-4 py-2 bg-gray-100 rounded text-gray-500 cursor-pointer hover:shadow transition-all;
+  @apply px-4 py-2 bg-gray-100 rounded text-gray-500 cursor-pointer hover:shadow transition-all;
 }
 
 body,
@@ -33,6 +33,10 @@ main {
   min-height: calc(100vh - 56px);
   z-index: 2;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .ribbons {
@@ -47,4 +51,8 @@ main {
 
 body {
     overflow-x: hidden;
+}
+
+canvas {
+  height: 100% !important;
 }
