--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-    :root {
-        --color-primary: #4c9f70;
-        --color-secondary: #496f5d;
-        --color-dark: #49516f;
-        --color-accent: #6279b8;
-        --color-accent-2: #8ea4d2;
-    }
+  :root {
+    --color-primary: #4c9f70;
+    --color-secondary: #496f5d;
+    --color-dark: #49516f;
+    --color-accent: #6279b8;
+    --color-accent-2: #8ea4d2;
+  }
 }
 
 .button-primary {
@@ -22,15 +22,14 @@
 
 body,
 #root {
-    height: 100%;
+  height: 100%;
 }
 
 #root {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 main {
-  min-height: calc(100vh - 56px);
   z-index: 2;
   position: relative;
   display: flex;
@@ -40,19 +39,23 @@ main {
 }
 
 .ribbons {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    pointer-events: none;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 canvas {
   height: 100% !important;
+}
+
+.button-outline {
+  @apply px-4 py-2 text-dark rounded shadow text-white;
 }
