--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,11 +13,11 @@
 }
 
 .button-primary {
-  @apply px-4 py-2 bg-primary rounded text-white cursor-pointer hover:shadow transition-all;
+  @apply px-4 py-2 bg-primary rounded text-white cursor-pointer hover:shadow transition-all font-thin;
 }
 
 .button-secondary {
-  @apply px-4 py-2 bg-gray-100 rounded text-gray-500 cursor-pointer hover:shadow transition-all;
+  @apply px-4 py-2 bg-gray-100 rounded text-gray-500 cursor-pointer hover:shadow transition-all font-thin;
 }
 
 body,
